@@ -6,7 +6,8 @@
 \usage{
 \method{await}{BatchtoolsFuture}(future, cleanup = TRUE,
   timeout = getOption("future.wait.timeout", 30 * 24 * 60 * 60),
-  delta = getOption("future.wait.interval", 1), ...)
+  delta = getOption("future.wait.interval", 1),
+  alpha = getOption("future.wait.alpha", 1.01), ...)
 }
 \arguments{
 \item{future}{The future.}
@@ -17,6 +18,9 @@ success, otherwise not.}
 \item{timeout}{Total time (in seconds) waiting before generating an error.}
 
 \item{delta}{The number of seconds to wait between each poll.}
+
+\item{alpha}{A factor to scale up the waiting time in each iteration such
+that the waiting time in the k:th iteration is \code{alpha ^ k * delta}.}
 
 \item{\ldots}{Not used.}
 }
